fix forum post and message overflow

--- a/ui/site/css/forum/_post.scss
+++ b/ui/site/css/forum/_post.scss
@@ -54,7 +54,7 @@
   }
 
   &__message {
-    @extend %break-word;
+    @extend %break-word-hard;
     .embed:not(img) {
       @extend %video;
       margin: $block-gap auto;
